              pjtoppm: Handle input stream with no transmission mode command.
              Always broken.  Pjtoppm was in primordial Netpbm (1991).

              cameratopam: Handle I/O error on input file.  Always broken.
              Cameratopam was new to Netpbm in Netpbm 10.25 (June 2005).

              xbmtopbm: Recognize "unsigned short" as an extension of
              XBM X10 format.

              picttoppm: Fix bug with an input file that specifies a clip
              region (ClipRgn opcode) that is not contained within the
              picture frame.  Result is invalid memory access.  Broken
              some time 1994-2002.

              picttoppm: Fix incorrect output (sheared) when a blit must be
              scaled.  Broken in Netpbm 10.34 (June 2006) or 10.35 (August
              2006).

              pbmtonokia: Fix incorrect output with -txt option.

              pbmtonokia: Fix incorrect output with newer compiler.

              pnmtorle: Fix incorrect command and filename in header.
              Broken in Netpbm 10.88 (September 2019).

              cameratopam: Fix buffer overrun.  Always present. (cameratopam
              was new in Netpbm 10.28 (June 2005)).

              cameratopam: Fix undefined behavior using 'swab' to swap bytes
              in place.  Always present. (cameratopam was new in Netpbm 10.28
              (June 2005)).

              ppmtompeg: Fix buffer overruns with very long names in input
              parameter files.  Always broken.  Ppmtompeg was new in
              Netpbm 8.4 (April 2000).

              ximtoppm: Fix possible program crash due to invalid memory
              reference.  Always broken.  ximtoppm was in primordial Netpbm,
              ca 1989.

20.03.26 BJH  Release 10.90.00

              pamundice: Add -listfile.

              pamditherbw: Remove restriction to 2^18 pixels width and height
              for -hilbert .
