@@ -17,6 +17,9 @@ not yet  BJH  Release 10.91.00
               xbmtopbm: Recognize "unsigned short" as an extension of
               XBM X10 format.
 
+              winicontopam: Fix crash with PNG icon.  Always broken.
+              Winicontopam was new in Netpbm 10.63 (June 2013).
+
               picttoppm: Fix bug with an input file that specifies a clip
               region (ClipRgn opcode) that is not contained within the
               picture frame.  Result is invalid memory access.  Broken
